<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="20dp">

        <EditText
            android:id="@+id/ipekValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/antic"
            android:hint="@string/ipek"
            android:text=""
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/ksnValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:fontFamily="@font/antic"
            android:textColor="@color/black"
            android:hint="@string/ksn"
            android:layout_marginTop="10dp"
            android:text=""
            />

        <EditText
            android:id="@+id/ksnCountValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:fontFamily="@font/antic"
            android:textColor="@color/black"
            android:hint="@string/ksn_counter"
            android:text=""
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:padding="2dp">

            <TextView
                android:id="@+id/switchTexts"
                android:layout_width="1in"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:fontFamily="@font/antic"
                android:hint="TEST KEYS"
                android:text=""
                />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switchKeys"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:checked="false"
                android:padding="10dp"
                android:textSize="20sp"/>

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/workingKeyBut"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_marginStart="210sp"
            android:layout_marginTop="20dp"
            app:cornerRadius="17dp"
            android:fontFamily="@font/antic"
            android:text="@string/working_key"
            android:shadowColor="@color/black"
            android:textColor="@color/white"/>

        <EditText
            android:id="@+id/workingKeyValue"
            android:layout_marginTop="10dp"
            android:layout_width="15in"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:hint="@string/working_key_val"
            android:text=""
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="50dp">

            <EditText
                android:id="@+id/clearPan"
                android:layout_width="15in"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:fontFamily="@font/antic"
                android:hint="@string/card_pan"
                android:inputType="number"
                android:maxLength="19"
                android:text=""
                />

            <EditText
                android:id="@+id/clearPin"
                android:layout_width="15in"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:hint="@string/card_pin"
                android:fontFamily="@font/antic"
                android:inputType="number"
                android:maxLength="4"
                android:text=""
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/encryptButton"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:shadowColor="@color/black"
                android:layout_marginStart="85sp"
                app:cornerRadius="40dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/antic"
                android:text="@string/generate_pinblock"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/pinBlock"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textSize="20sp"
                android:layout_marginTop="20sp"
                android:textColor="@color/black"
                android:hint="@string/pinblock"
                android:text=""
                />
        </LinearLayout>

    </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</RelativeLayout>